K1J-446: Should not be able to replace complemented certificate (#330)